-Login oauth y Vista de playlists

--- a/SpotiHigherLowerApp/appsettings.json
+++ b/SpotiHigherLowerApp/appsettings.json
@@ -2,11 +2,17 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SpotiHigherLowerApp-b37ed9d0-f597-4355-a7ac-ffbdc05c5e2d;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+
+    "Spotify": {
+        "ClientId": "69720f0280f34aceab4936296ced40b7",
+        "ClientSecret": "a2ca62d9f9134652a38be3fe7f021064",
+        "RedirectUri": "https://localhost:7063/Auth/Game"
+    },
   "AllowedHosts": "*"
 }
